syntax = "proto3";

package GIGAPartitionProto;

service GIGAPartitionService {
	rpc LockObject (LockObjectRequest) returns (LockObjectReply);
	rpc WriteObject (WriteObjectRequest) returns (WriteObjectReply);
}

/* Lock Message */
message LockObjectRequest {
	string partition_id = 1;
	string object_id = 2;
}

message LockObjectReply {
	bool ok = 1;
}

/* Write and unlock Message */
message WriteObjectRequest {
	string partition_id = 1;
	string object_id = 2;
	string value = 3;
}

message WriteObjectReply {
	bool ok = 1;
}

